[fix] css tooltip z-index

--- a/sites/all/themes/sunshine/css/910-tooltip.css
+++ b/sites/all/themes/sunshine/css/910-tooltip.css
@@ -9,6 +9,7 @@ div.tooltip {
 	font-size:1.1em;
 	display:none;
 	color:#fff;
+  z-index: 999;
 }
 
 /* tooltip title element (h3) */
